v2024.1.0
- Add OhmPi.test() (#261)
- Add checklist for field installation (doc/_static/ohmpi-checklist.pdf)
- Add coverage.sh that runs .dev/test_all.py integration test (#263)
- Rename headers (#239)
- Rename strategies: "constant" -> "safe", "full_constant" -> "fixed" (#216)
- Remove tx_volt and vab from run_measurement()