@@ -8,10 +8,9 @@ k = OhmPi()
 # Update settings if needed
 k.update_settings({"injection_duration": 1.})
 k.update_settings({"strategy": "vmin"})
-k.update_settings({"vab_init": 5.})
 k.update_settings({"vab_req": 5.})
 k.update_settings({"vmn_req": 1.})
-k.update_settings({"nb_stack":1})
+k.update_settings({"n_stacks":1})
 
 # Set or load sequence
 k.sequence = np.array([[1+i,4+i,2+i,3+i] for i in range(13)])    # set numpy array of shape (n,4)
